--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="home.css">
     <title>Huda Bakht</title>
 </head>
 <body>
@@ -18,10 +18,10 @@
       <i class="fas fa-times" id="cancel"></i>
     </label>
     <div class="sidebar">
-    <header><a href="file:///Users/hudaarif/Desktop/Bootcamp/tuto/index.html">Huda Bakht</a></header>
     <ul>
-     <li><a href="#"><i class="far fa-question-circle"></i>About</a></li>
-     <li><a href="#"><i class="fas fa-sliders-h"></i>Projects</a></li>
+      <li class="home"><a href="file:///Users/hudaarif/Desktop/Portfolio/home.html"><i class="fa fa-home"></i>Home</a></li>
+     <li><a href="file:///Users/hudaarif/Desktop/Portfolio/about.html"><i class="far fa-question-circle"></i>About</a></li>
+     <li><a href="file:///Users/hudaarif/Desktop/Portfolio/projects.html"><i class="fas fa-sliders-h"></i>Projects</a></li>
      <li><a href="#"><i class="far fa-envelope"></i>Contact</a></li>
     </ul>
     <a href="https://www.linkedin.com/in/huda-a-bakht-8119b7213/"><i class="fa-brands fa-linkedin-in"></i></a>
