--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="projects.css">
-    <title>Document</title>
+    <title>Huda Bakht</title>
 </head>
 <body>
     <div class="background">
@@ -17,10 +17,10 @@
             <li class="home"><a href="file:///Users/hudaarif/Desktop/Portfolio/home.html"><i class="fa fa-home"></i>Home</a></li>
            <li><a href="file:///Users/hudaarif/Desktop/Portfolio/about.html"><i class="far fa-question-circle"></i>About</a></li>
            <li><a href="file:///Users/hudaarif/Desktop/Portfolio/projects.html"><i class="fas fa-sliders-h"></i>Projects</a></li>
-           <li><a href="#"><i class="far fa-envelope"></i>Contact</a></li>
+           <li><a href="file:///Users/hudaarif/Desktop/Portfolio/contact.html"><i class="far fa-envelope"></i>Contact</a></li>
           </ul>
 
-          <div class="btn"><a href="">Resume</a></div>
+          <div class="btn"><a href="https://www.canva.com/design/DAFTihK3Op0/U5q6pB3VyclLj2yMOOlY9w/view?utm_content=DAFTihK3Op0&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink">Resume</a></div>
      <div class="foot">
      <a href="https://www.linkedin.com/in/huda-a-bakht-8119b7213/"><i class="fa-brands fa-linkedin-in"></i></a>
     <a href="https://www.twitter.com/wh0thehuda"><i class="fa-brands fa-twitter"></i></a>
